# qr_picturizer

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  pyproject.toml
conf/: config.yaml  logging_config.json  params.yaml
config/: logging_config.json
src/: main.py
src/modules/: operator.py  qr_generator.py  utils.py
